@@ -35,6 +35,7 @@ documents those changes that are of interest to users and admins.
  -- Revert some resent signal handling logic from salloc so that SIGHUP sent
     after the job allocation will properly release the allocation and cause
     salloc to exit.
+ -- BLUEGENE - Fix for recreating a block in a ready state.
 
 * Changes in SLURM 2.2.0.rc3
 ============================
